# dottit

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  dottit.code-workspace  rustfmt.toml
services/authorization-service/crates/service/: Cargo.toml
services/authorization-service/crates/service/src/database/: auth_token_db.rs  mod.rs
services/authorization-service/crates/service/src/service/: auth_token_service.rs  mod.rs
services/authorization-service/crates/web/: Cargo.toml
services/authorization-service/crates/web/src/: database.rs  main.rs
services/authorization-service/crates/web/src/graphql/: mod.rs  schema.rs
services/board-service/crates/infrastructure/: .env.example  Cargo.toml
services/board-service/crates/infrastructure/migration/: Cargo.toml
services/board-service/crates/infrastructure/migration/src/: lib.rs  m20221206_130345_create_board_table.rs  main.rs
services/board-service/crates/infrastructure/src/: conversion.rs  lib.rs
services/board-service/crates/infrastructure/src/model/: board.rs  board_moderator.rs  mod.rs  prelude.rs
services/board-service/crates/infrastructure/src/repos/: board_moderator_repository.rs  board_repository.rs  mod.rs
services/board-service/crates/service/: Cargo.toml
services/board-service/crates/service/src/repos/: board_moderator_repository.rs  board_repository.rs  mod.rs
services/board-service/crates/service/src/services/: board_service.rs  mod.rs
services/comment-service/crates/infrastructure/: .env.example  Cargo.toml
services/comment-service/crates/infrastructure/migration/: Cargo.toml
services/comment-service/crates/infrastructure/migration/src/: lib.rs  m20220921_233556_create_threads_table.rs  m20221108_133045_create_comment_table.rs  main.rs
services/comment-service/crates/infrastructure/src/: conversion.rs  lib.rs
services/comment-service/crates/infrastructure/src/model/: comment.rs
services/comment-service/crates/infrastructure/src/repos/: comment_repository.rs  mod.rs  thread_repository.rs
services/comment-service/crates/service/: Cargo.toml
services/comment-service/crates/service/src/repos/: comment_repository.rs  mod.rs  thread_repository.rs
services/comment-service/crates/service/src/services/: comment_service.rs  mod.rs  thread_service.rs
services/comment-service/crates/web/: Cargo.toml
services/comment-service/crates/web/src/: database.rs  main.rs
services/comment-service/crates/web/src/graphql/: schema.rs
services/gateway-service/: .dockerignore  Cargo.toml  Dockerfile  router.yml  skaffold.yml  supergraph.yml
services/gateway-service/k8s/dev/service/: gateway-service.deplyoment.yml  gateway-service.service.yml
services/gateway-service/src/: auth_plugin.rs  main.rs
services/thread-service/crates/database/: .env.example  Cargo.toml
services/thread-service/crates/database/migration/: Cargo.toml
services/thread-service/crates/database/migrations/2022-09-21-164113_create_threads/: up.sql
services/thread-service/crates/database/src/: conversion.rs  lib.rs  schema.rs  types.rs
services/thread-service/crates/database/src/model/: conversion.rs  mod.rs  thread.rs
services/thread-service/crates/database/src/repos/: mod.rs  thread_repository.rs
services/thread-service/crates/infrastructure/: Cargo.toml  generate_entities.sh
services/thread-service/crates/infrastructure/migration/: Cargo.toml
services/thread-service/crates/infrastructure/migration/src/: lib.rs  m20220921_233556_create_threads_table.rs  main.rs
services/thread-service/crates/infrastructure/src/: conversion.rs  lib.rs
services/thread-service/crates/infrastructure/src/messaging/: mod.rs  rmq_message_bus.rs  rmq_message_exchange.rs  rmq_message_queue_backend.rs
services/thread-service/crates/infrastructure/src/model/: mod.rs  prelude.rs  thread.rs
services/thread-service/crates/infrastructure/src/repos/: thread_repository.rs
services/thread-service/crates/service/: Cargo.toml
services/thread-service/crates/service/src/: lib.rs
services/thread-service/crates/service/src/messaging/: message_bus.rs  message_exchange.rs  message_queue.rs  message_queue_backend.rs  mod.rs
services/thread-service/crates/service/src/repos/: error.rs  mod.rs  thread_repository.rs
services/thread-service/crates/service/src/services/: mod.rs  thread_service.rs
services/thread-service/crates/web/: Cargo.toml
services/thread-service/crates/web/src/: database.rs  event_bus.rs  main.rs  mediator_handlers.rs
services/thread-service/crates/web/src/graphql/: mod.rs  schema.rs
services/user-service/crates/infrastructure/: .env.example  Cargo.toml
services/user-service/crates/infrastructure/migration/: Cargo.toml
services/user-service/crates/infrastructure/migration/src/: lib.rs  m20221122_185520_create_user_table.rs  main.rs
services/user-service/crates/infrastructure/src/: conversion.rs  lib.rs
services/user-service/crates/infrastructure/src/model/: user.rs
services/user-service/crates/infrastructure/src/repos/: user_repository.rs
services/user-service/crates/service/: Cargo.toml
services/user-service/crates/service/src/: lib.rs
services/user-service/crates/service/src/repos/: mod.rs  user_repository.rs
services/user-service/crates/service/src/services/: mod.rs  user_service.rs
services/user-service/crates/web/: Cargo.toml
services/user-service/crates/web/src/: database.rs  main.rs  mediator_handlers.rs
services/user-service/crates/web/src/graphql/: schema.rs
shared/shared-rust/crates/infra/: Cargo.toml
shared/shared-rust/crates/infra/src/messaging/: amqp_event_bus_backend.rs  mod.rs  rmq_event_bus_backend.rs
shared/shared-rust/crates/service/: Cargo.toml
shared/shared-rust/crates/service/src/: lib.rs
shared/shared-rust/crates/service/src/events/: exchanges.rs  mediator_query.rs  mediator_response.rs  mod.rs  thread_deleted.rs
shared/shared-rust/crates/service/src/messaging/: event.rs  event_bus.rs  mod.rs  (+5 more)
shared/shared-rust/crates/web/: Cargo.toml
shared/shared-rust/crates/web/src/: authenticated_user.rs  gql_context_extensions.rs  lib.rs
(+294 files in other folders)
