[package]
name = "authorization-service-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "authorization_service_service"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
async-trait = "0.1.57"
redis = { version = "0.22.1", features = ["tokio-comp"] }
rand = "0.8.5"
uuid = { workspace = true }
