[package]
name = "authorization-service-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dottit-shared-service = { path = "../../../../shared/shared-rust/crates/service" }
dottit-shared-infra = { path = "../../../../shared/shared-rust/crates/infra" }
authorization-service-service = { path = "../service" }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.15.0"
uuid = "1.2.1"
thiserror = "1.0.37"
axum = "^0.5.1"
redis = { version = "0.22.1", features = ["tokio-comp"] }
