[package]
name = "comment-service-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "comment_service_service"
path = "src/lib.rs"

[dependencies]
comment-service-model = { path = "../model" }
thiserror = "1.0.37"
async-trait = "0.1.57"
amiquip = "0.4.2"
tokio = { version = "1.21.2", features = ["full"] }
dottit-shared-service = { path = "../../../../shared/shared-rust/crates/service" }
