[package]
name = "database"
version = "0.1.0"
edition = "2021"

[lib]
name = "database"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "^0", features = [
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros",
] }
service = { path = "../service" }
model = { path = "../model" }
async-trait = "0.1.57"
dyn-clone = "1.0.9"
