[package]
name = "thread-service-infrastructure"
version = "0.1.0"
edition = "2021"

[lib]
name = "thread_service_infrastructure"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "^0.9.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
thread-service-service = { path = "../service" }
thread-service-model = { path = "../model" }
dottit-shared-service = { path = "../../../../shared/shared-rust/crates/service" }
async-trait = "0.1.57"
dyn-clone = "1.0.9"
thread-service-migration = { path = "./migration" }
lapin = "2.1.1"
tokio = { version = "1.21.2", features = ["full"] }
uuid = "1.2.2"
chrono = "0.4.23"
