[package]
name = "thread-service-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "thread_service_service"
path = "src/lib.rs"

[dependencies]
thread-service-model = { path = "../model" }
thiserror = "1.0.37"
async-trait = "0.1.57"
dyn-clone = "1.0.9"
amiquip = "0.4.2"
tokio = { version = "1.21.2", features = ["full"] }
dottit-shared-service = { path = "../../../../shared/shared-rust/crates/service" }
uuid = "1.2.2"
chrono = "0.4.23"
