[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.5.1"
async-graphql-axum = "^4.0.6"
async-graphql = "^4.0.6"
tokio = { version = "1.0", features = ["full"] }
service = { path = "../service" }
infrastructure = { path = "../infrastructure" }
model = { path = "../model" }
sea-orm = { version = "^0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
dottit-shared-service = { path = "../../../../shared/shared-rust/crates/service" }
dottit-shared-infra = { path = "../../../../shared/shared-rust/crates/infra" }
