[package]
name = "user-service-infrastructure"
version = "0.1.0"
edition = "2021"

[lib]
name = "user_service_infrastructure"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "^0.9.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
user-service-service = { path = "../service" }
user-service-model = { path = "../model" }
user-service-migration = { path = "./migration" }
async-trait = "0.1.57"
dyn-clone = "1.0.9"
lapin = "2.1.1"
tokio = { version = "1.21.2", features = ["full"] }
