[package]
name = "user-service-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "user_service_service"
path = "src/lib.rs"

[dependencies]
user-service-model = { path = "../model" }
thiserror = "1.0.37"
async-trait = "0.1.57"
amiquip = "0.4.2"
tokio = { version = "1.21.2", features = ["full"] }
dottit-shared-service = { path = "../../../../shared/shared-rust/crates/service" }
bcrypt = "0.13.0"
uuid = "1.2.2"
regex = "1"
lazy_static = "1.4.0"
tracing = { workspace = true }
