[package]
name = "dottit-shared-infra"
version = "0.1.1"
edition = "2021"

[lib]
name = "shared_infra"
path = "src/lib.rs"

[dependencies]
dottit-shared-service = { path = "../service" }
async-trait = "0.1.57"
lapin = "2.1.1"
anyhow = "1.0.65"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { workspace = true }
tokio-stream = "0.1.10"
tracing = { workspace = true }
