[package]
name = "dottit-shared-service"
version = "0.1.1"
edition = "2021"

[lib]
name = "shared_service"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"
serde_json = "1.0"
anyhow = "1.0.65"
async-trait = "0.1.57"
tokio = { version = "0.2", features = ["full"] }
